<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_bringup</name>
  <version>1.0.0</version>
  <description>Sensor bringup package for launching all sensors (Livox LiDAR, IMU, GPS)</description>
  <maintainer email="3174680732@qq.com">yunle_sensors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Launch dependencies -->
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fdilink_ahrs</exec_depend>
  <exec_depend>gnss_converter</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
